<resources>
    <string name="app_name">MediaPlayer</string>
    <string name="album_cover">Album cover</string>
    <string name="example_title">Example title</string>
    <string name="year">Year</string>
    <string name="example_album">Example album</string>
    <string name="example_artist">Example artist</string>
    <string name="duration">Duration</string>
    <string name="about">About</string>
    <string name="about_title">MediaPlayer</string>
    <string name="about_version">Version: %1$s</string>
    <string name="about_description">A simple MediaPlayer app featuring RecyclerView</string>
    <string name="about_coded">Coded by:</string>
    <string name="about_author">Kacper Kasztelanic\n200746</string>
    <string name="about_date">June 2017</string>
    <string name="about_image">About image</string>
    <string name="_00_00">00:00</string>
    <string name="_05_15">05:15</string>
    <string name="play_button">Play button</string>
    <string name="stop_button">Stop button</string>
    <string name="forward_button">Forward button</string>
    <string name="next_button">Next button</string>
    <string name="backward_button">Backward button</string>
    <string name="previous_button">Previous button</string>
    <string name="could_not_load_file">Could not load file.</string>
</resources>
