<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/cont_item_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp">

    <ImageView
        android:id="@+id/img"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_centerVertical="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/album_cover"
        android:scaleType="fitXY"
        android:src="@drawable/nocoverart"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/artist"
        android:layout_toEndOf="@+id/img"
        android:ellipsize="end"
        android:fontFamily="sans-serif"
        android:maxLines="1"
        android:text="@string/example_title"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/img"
        android:ellipsize="end"
        android:fontFamily="sans-serif"
        android:maxLines="1"
        android:text="@string/example_artist"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/artist"
        android:layout_below="@+id/artist"
        android:ellipsize="end"
        android:fontFamily="sans-serif"
        android:maxLines="1"
        android:text="@string/example_album"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/album"
        android:layout_below="@+id/album"
        android:text="@string/duration"/>
</RelativeLayout>