<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pwr.kasztelanic.mediaplayer.activities.SongActivity">

    <TextView
        android:id="@+id/stitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/example_title"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/hor4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hor2"/>

    <TextView
        android:id="@+id/salbum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/example_album"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/hor1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sartist"
        />

    <TextView
        android:id="@+id/snow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/_00_00"
        app:layout_constraintBottom_toTopOf="@+id/hor3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        />

    <TextView
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/_05_15"
        app:layout_constraintBottom_toTopOf="@+id/hor3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"/>

    <TextView
        android:id="@+id/sartist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/example_artist"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/scover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/album_cover"
        android:src="@drawable/nocoverart"
        app:layout_constraintBottom_toTopOf="@+id/hor2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hor1"/>

    <SeekBar
        android:id="@+id/seekBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:progress="0"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hor4"/>

    <ImageButton
        android:id="@+id/playBtn"
        style="@android:style/Widget.Material.Light.ImageButton"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/play_button"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_play_arrow_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/stopBtn"
        app:layout_constraintRight_toLeftOf="@+id/fwrdBtn"
        app:layout_constraintTop_toTopOf="@+id/hor3"/>

    <ImageButton
        android:id="@+id/stopBtn"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/stop_button"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_stop_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/bwrdBtn"
        app:layout_constraintRight_toLeftOf="@+id/playBtn"
        app:layout_constraintTop_toTopOf="@+id/hor3"/>

    <ImageButton
        android:id="@+id/fwrdBtn"
        style="@android:style/Widget.Material.ImageButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/forward_button"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_fast_forward_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/playBtn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hor3"
        app:layout_constraintVertical_bias="0.516"/>

    <ImageButton
        android:id="@+id/bwrdBtn"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/backward_button"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_fast_rewind_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/stopBtn"
        app:layout_constraintTop_toTopOf="@+id/hor3"
        app:layout_constraintVertical_bias="0.516"/>

    <android.support.constraint.Guideline
        android:id="@+id/hor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="77dp"/>

    <android.support.constraint.Guideline
        android:id="@+id/hor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="307dp"/>

    <android.support.constraint.Guideline
        android:id="@+id/hor3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="409dp"/>

    <android.support.constraint.Guideline
        android:id="@+id/hor4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.67"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="343dp"/>
</android.support.constraint.ConstraintLayout>